Migrated to Angular 17, Map details fixed

--- a/Angular2024/src/index.html
+++ b/Angular2024/src/index.html
@@ -5,7 +5,7 @@
   <title>Angular2024</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdATvjw1T2LvQjN_41oOnXgGGuto6dQxM"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdATvjw1T2LvQjN_41oOnXgGGuto6dQxM" async defer></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
