Admins added (groom, bride, organizer)

--- a/Angular2024/src/index.html
+++ b/Angular2024/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular2024</title>
+  <title>Hani & Mariusz Wedding</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdATvjw1T2LvQjN_41oOnXgGGuto6dQxM" async defer></script>
