--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <img src="https://hips.hearstapps.com/hmg-prod/images/lead-the-grovers-jpg-1568318058.jpg?crop=0.986xw:0.684xh;0.00321xw,0.159xh&resize=1200:*" style="display: none"/> 
 </body>
 </html>
